--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
 
     <header>
-        <h1>Hello, Word!</h1>
+        <img id="folha2" src="midia/folhas2.png" alt="">
+        <img id="pincelada-header" src="midia/pincelada.png" alt="">
     </header>
 
     <main>
-        
+        <img id="main" src="midia/main.png" alt="">
     </main>
 
     <footer>
-
+        <img id="folha1" src="midia/folhas1.png" alt="">
+        <img id="pincelada-footer" src="midia/pincelada.png" alt="">
     </footer>
     
 </body>
