Parte Visual Do Css Finalizada ( Falta Media Query )

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         <article id="container-informacoes">
             <p id="data">05 de Julho</p>
-            <p id="horario">Às 19</p>
+            <p id="horario">Às 19 Horas</p>
         </article>
 
         <article id="container-botoes">
-            <button id="local" class="botoes"><a href="">Local</a></button>
-            <button id="presenca" class="botoes"><a href="">Presença</a></button>
+            <button id="local" class="botoes"><a href="https://maps.app.goo.gl/r14KQt5H4nCydqW97" target="_blank">Local</a></button>
+            <button id="presenca" class="botoes"><a href="https://docs.google.com/forms/d/e/1FAIpQLSceFrWCLXWGXHCVzc1E0xgrs0WiAyS7M0YgbQcSglMqdv_47Q/viewform?usp=sf_link" target="_blank">Presença</a></button>
         </article>
 
     </main>
